# librime-octagram

./: CMakeLists.txt
docs/: GITHUB_ACTIONS_EXPLAINED.md  kenlm_config_snippet.yaml
src/: kenlm_grammar.cc  kenlm_grammar.h  kenlm_model.cc  kenlm_model.h  octagram.cc  octagram.h
tests/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  INSTALL_COMPILER.md  INSTALL_GPP_WINDOWS.md  QUICKSTART.md  README.md  run_tests.bat  run_tests.sh  smoke_backend.cc  test_gram_db.cc  test_gram_encoding.cc  test_octagram.cc
tools/: build_kenlm_model.bat  build_kenlm_model.sh
